# audio-meta-scraper

./: CHANGELOG.rst  setup.cfg
src/: README.txt  background.py  metadata.py  metaflac.py  scheduler.py
src/metasift/: main.py
src/metasift/metasutil/: api.py  log.py  utils.py
