[metadata]
name = MetaSift
version = 2.0.0
author = Marcus Antonelli
author_email = contact@marcusantonelli.com
description = A small tool to find audio files and store their metadata.
long_description = file: README.md
keywords = audio, metadata, scraper, metasift, paths, mutagen
license = GNU GPLv3
classifiers = Programming Language :: Python :: 3

[options]
zip_safe = False
package_dir = 
    = src
packages = find:
python_requires = >=3.9
install_requires = mutagen

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    metasift = metasift.main:main